# cfgengine

./: CHANGELOG.md  README.md  makefile  pyproject.toml  requirements.txt
cfgengine/: __init__.py  config_loader.py  default_parser.py  parser.py  parser_registry.py  utils.py
tests/: test_loader.py  test_parser.py  test_register.py
